# fox-docker-agent

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  pyproject.toml
agent/: .env.example  Dockerfile  docker-compose.yml  start.sh
fluent-bit/: fluent-bit.conf
src/: main.py
src/fox_pypi/: __init__.py
src/fox_pypi/core/: __init__.py  say_hi.py
systemd/: azdo-agent.service  azdo-warm.service  docker-prune.service  docker-prune.timer  fluent-bit.service
tests/core/: test_say_hi.py
