[project]
name = "fox-pypi"
version = "0.1.0"
description = "Minimal test package for Azure DevOps pipeline"
authors = [{ name = "A Nova", email = "anova@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.30.0",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"